--- a/package.json
+++ b/package.json
@@ -7,31 +7,23 @@
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Alex Wohlbruck (alexwohlbruck@gmail.com)",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "bluebird": "^3.5.0",
     "body-parser": "^1.16.1",
     "cheerio": "^1.0.0-rc.2",
     "combined-stream": "^1.0.5",
     "cookie-parser": "^1.4.3",
-    "country-data": "0.0.31",
-    "dotenv": "^10.0.0",
+    "dotenv": "^5.0.1",
     "express": "^4.14.1",
-    "express-geoip": "^2.2.0",
     "googleapis": "^16.1.0",
     "method-override": "^2.3.7",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
-    "socket.io": "^2.0.1",
     "spotify-web-api-node": "^2.3.6",
-    "ytdl-core": "^4.9.1"
+    "ytdl-core": "^0.20.2"
   },
   "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-cli": "^1.2.0",
-    "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-uglify": "^3.0.1",
     "morgan": "^1.8.0",
     "nodemon": "^1.11.0"
   }
